--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/Architecture/index.js",
+    "start": "node ./dist/index.js",
     "dev": "tsc --watch"
   },
   "author": "",
